--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@
 
 	.battle-nav-row:first-child input[type="text"] {
 	  flex: 1;
-	  max-width: 40%; /* 限制最大宽度 */
+	  max-width: 30vw; /* 限制最大宽度 */
 	  height: 100%; 
 	  min-height: 5vh;
 	  box-sizing: border-box; 
@@ -1447,7 +1447,7 @@
 	}
 
 	.battle-nav-row:first-child button {
-	  margin-left: auto; /* 推到右侧 */
+	  margin-left: 10vw; /* 推到右侧 */
 	  height: 100%;
 	  min-height: 5vh;
 	  min-width: 5vh;
@@ -1473,7 +1473,7 @@
 	  min-width: 100px; /* 给开始按钮一个最小宽度 */
 	  height: 100%;
 	  min-height: 5vh;
-	  min-width: 14vh;
+	  min-width: 10vh;
 	  box-sizing: border-box; 
 	  font-size: calc(5vh * 0.3);
 	  line-height: 5vh; 
