--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@
 	  left: 50%;
 	  transform: translateX(-50%);
 	  width: 100vw;
-	  height: 50vh;
+	  height: 40vh;
 	  z-index: 2100;
 	  display: flex;
       flex-direction: column;
@@ -1224,7 +1224,7 @@
 	  display: grid;
 	  grid-template-rows: 1fr auto auto;
 	  align-items: stretch; /* 使子元素拉伸填充宽度 */
-	  height: calc(50vh - 180px);
+	  height: calc(40vh - 180px);
 	}
 
 	.battle-header button {
@@ -1272,10 +1272,10 @@
 
 	.battle-log {
 	  position: relative;
-	  top: 50vh;
+	  top: 40vh;
 	  left: 0;
 	  width: 100%;
-	  height: 50vh;
+	  height: 60vh;
 	  background: #1f1f1f;         /* 與探索日誌一致 */
 	  color: #fff;
 	  overflow-y: auto;
@@ -1428,32 +1428,32 @@
 	}
 	.battle-header .battle-nav-row:first-child {
 	  grid-row: 2;           /* 第一行操作区放到第二行 */
-	  margin-bottom: 3vh;
+	  margin-bottom: 2vh;
 	}
 	.battle-header .battle-nav-row:last-child {
 	  grid-row: 3;           /* 第二行操作区放到第三行 */
-	  margin-bottom: 3vh;
+	  margin-bottom: 2vh;
 	}
 
 	.battle-nav-row:first-child input[type="text"] {
 	  flex: 1;
 	  max-width: 30vw; /* 限制最大宽度 */
 	  height: 100%; 
-	  min-height: 5vh;
+	  min-height: 4vh;
 	  box-sizing: border-box; 
-	  font-size: calc(5vh * 0.3);
-	  line-height: 5vh;
+	  font-size: calc(4vh * 0.35);
+	  line-height: 4vh;
 	  padding: 0 0.5em;
 	}
 
 	.battle-nav-row:first-child button {
 	  margin-left: 10vw; /* 推到右侧 */
 	  height: 100%;
-	  min-height: 5vh;
-	  min-width: 5vh;
+	  min-height: 4vh;
+	  min-width: 4vh;
 	  box-sizing: border-box; 
-	  font-size: calc(5vh * 0.3);
-	  line-height: 5vh;
+	  font-size: calc(4vh * 0.35);
+	  line-height: 4vh;
 	  padding: 0 2em
 	}
 
@@ -1462,21 +1462,22 @@
 	  flex: 1;
 	  max-width: 30%; /* 限制最大宽度，确保三个选择器大小一致 */
 	  height: 100%;
-	  min-height: 5vh;
+	  min-height: 4vh;
 	  box-sizing: border-box; 
-	  font-size: calc(5vh * 0.3);
-	  line-height: 5vh; 
+	  font-size: calc(4vh * 0.35);
+	  min-font-size:1.1rem;
+	  line-height: 4vh; 
 	  padding: 0 0.5em
 	}
 
 	.battle-nav-row:last-child button {
 	  min-width: 100px; /* 给开始按钮一个最小宽度 */
 	  height: 100%;
-	  min-height: 5vh;
-	  min-width: 5vh;
+	  min-height: 4vh;
+	  min-width: 4vh;
 	  box-sizing: border-box; 
-	  font-size: calc(5vh * 0.3);
-	  line-height: 5vh; 
+	  font-size: calc(4vh * 0.35);
+	  line-height: 4vh; 
 	  padding: 0 0.5em
 	}
 
@@ -1486,10 +1487,10 @@
 	  background: #222;
 	  color: #fff;
 	  height: 100%;
-	  min-height: 5vh;
+	  min-height: 4vh;
 	  box-sizing: border-box; 
-	  font-size: calc(5vh * 0.3);
-	  line-height: 5vh; 
+	  font-size: calc(4vh * 0.35);
+	  line-height: 4vh; 
 	  padding: 0 0.5em
 	}
 
