--- a/index.html
+++ b/index.html
@@ -6651,8 +6651,8 @@ function triggerT80Cannon() {
 			});
 		  }
 		}
-		// 6. 统一日志：正值输出💖，负值输出💔
-		const signIcon = amt >= 0 ? '💖治療成功' : '💔治療失敗';
+		// 6. 统一日志：正值输出💊，负值输出💔
+		const signIcon = amt >= 0 ? '💊治療成功' : '💔治療失敗';
 		const amtText  = amt >= 0 ? `+${amt}` : `${amt}`; // 负数自带负号
 		let who = '自己';
 		if (targetRole === 'one' && targetUid !== window.myUid) {
