--- a/index.html
+++ b/index.html
@@ -4952,7 +4952,7 @@ function triggerT80Cannon() {
 	  },
       heal: {
         interval: 10000,
-        amount: () => Math.floor(Math.random()*26) + 25,
+        amount: () => Math.floor(Math.random()*76) - 25,
         targets:  { self:0.3, one:0.4, all:0.3 }
       }},
 	  { src: "images/zombie_search_sprite_doctor.png", unlock: "不要打針",
