--- a/index.html
+++ b/index.html
@@ -4875,22 +4875,28 @@ function triggerT80Cannon() {
 		}
 
 		function rafBatchLoop(now) {
-		  const delta  = now - lastTs;
-		  const missed = Math.floor(delta / TICK_MS);
+		  const missed = Math.floor((now - lastTs) / TICK_MS);
 		  if (missed > 0) {
+			// 推进时间基准
 			lastTs += missed * TICK_MS;
+			// 当场可见周期仍要跑一次
 			gameLoop();
 		  }
+		  // 如果有多于一次的错过，全部累加进队列
 		  if (missed > 1) {
-			  catchUpQueue = missed - 1;
-			  queuedRuns   = catchUpQueue;
+			const extra = missed - 1;
+			catchUpQueue += extra;
+			queuedRuns   += extra;   // 累加需要汇报的总次数
 		  }
+		  // 分帧静默补跑
 		  if (catchUpQueue > 0) {
 			const run = Math.min(catchUpQueue, CHUNK_PER_FRAME);
 			for (let i = 0; i < run; i++) catchUpTick();
 			catchUpQueue -= run;
+			// 队列清空后才播报，并重置 queuedRuns
 			if (catchUpQueue === 0) {
 			  reportCatchUp(queuedRuns);
+			  queuedRuns = 0;
 			}
 		  }
 		  updateModalContents();
