--- a/index.html
+++ b/index.html
@@ -3775,17 +3775,6 @@ function triggerT80Cannon() {
 	  }, 4250);
 	}
 
-	function checkBTREvent() {
-	  const garages = gameState.buildings.filter(b => b && b.type.toLowerCase() === "armoredgarage");
-	  if (garages.length > 0) {
-		const garageInfo = BUILDINGS.armoredGarage.getUpgradeInfo(garages[0].level);
-		if (Math.random() < garageInfo.effect.btrChance) {
-		  triggerBTRAnimation();
-		}
-	   }
-	 }
-	setInterval(checkBTREvent, 30000);  
-
 	function confirmUpgrade() {
 	  if (typeof currentUpgradeIndex === "undefined") return;	  
 	  const index = currentUpgradeIndex;
@@ -4568,76 +4557,56 @@ function triggerT80Cannon() {
 		}
 
 		const TICK_MS=5000,CHUNK_PER_FRAME=50;
-		let lastTs=performance.now(),inCatchUp=false,catchUpQueue=0,queuedRuns=0;
+		let lastTs=performance.now(),inCatchUp=false,catchUpQueue=0,queuedRuns=0,tickCounter=0,btrExpireTick=0;
 		const _origAddEventLog=window.addEventLog;
 		window.addEventLog=(msg,rarity,type,apply)=>{
-		  if(inCatchUp && type==='exploration' && msg.includes('入場')) return;
+		  if(inCatchUp&&type==='exploration'&&msg.includes('入場'))return;
 		  _origAddEventLog(msg,rarity,type,apply);
 		};
-		const _origTriggerZombieEntry=window.triggerZombieEntry,
-			  _origTriggerZombieLying=window.triggerZombieLying,
-			  _origProductionAccident=window.triggerProductionAccident,
-			  _origUpdateAllDisplays=window.updateAllDisplays,
-			  _origUpdateModalContents=window.updateModalContents,
-			  _origCheckBTREvent=checkBTREvent;
+		const _origTriggerZombieEntry=window.triggerZombieEntry,_origTriggerZombieLying=window.triggerZombieLying,_origProductionAccident=window.triggerProductionAccident,_origUpdateAllDisplays=window.updateAllDisplays,_origUpdateModalContents=window.updateModalContents,_origCheckBTREvent=checkBTREvent;
 		function suppressSideEffects(){
-		  window.triggerZombieEntry=()=>{};
-		  window.triggerZombieLying=()=>{};
-		  window.triggerProductionAccident=()=>{};
-		  window.updateAllDisplays=()=>{};
-		  window.updateModalContents=()=>{};
+		  window.triggerZombieEntry=()=>{};window.triggerZombieLying=()=>{};window.triggerProductionAccident=()=>{};window.updateAllDisplays=()=>{};window.updateModalContents=()=>{};
 		}
 		function restoreSideEffects(){
-		  window.triggerZombieEntry=_origTriggerZombieEntry;
-		  window.triggerZombieLying=_origTriggerZombieLying;
-		  window.triggerProductionAccident=_origProductionAccident;
-		  window.updateAllDisplays=_origUpdateAllDisplays;
-		  window.updateModalContents=_origUpdateModalContents;
+		  window.triggerZombieEntry=_origTriggerZombieEntry;window.triggerZombieLying=_origTriggerZombieLying;window.triggerProductionAccident=_origProductionAccident;window.updateAllDisplays=_origUpdateAllDisplays;window.updateModalContents=_origUpdateModalContents;
 		}
-		checkBTREvent=function(){ if(!inCatchUp) _origCheckBTREvent(); };
+		checkBTREvent=function(){if(!inCatchUp)_origCheckBTREvent();};
 		function gameTick(){
-		  checkAchievements();
-		  produceResources('farming','food',1.7*TICK_MS/1000);
-		  produceResources('recycling','materials',0.5*TICK_MS/1000);
-		  produceResources('research','tech',0.2*TICK_MS/1000);
-		  produceWeaponsFromArmories();
-		  produceZombies();
-		  updateFoodConsumption();
-		  updateSafetyCenterConsumption();
-		  updateBarracksWeaponConsumption();
-		  if(gameState.allocations.exploration>0) handleExploration();
-		  updateAllDisplays();
+		  tickCounter++;
+		  if(tickCounter%6===0){
+			const garages=gameState.buildings.filter(b=>b&&b.type.toLowerCase()==="armoredgarage");
+			if(garages.length>0){
+			  const info=BUILDINGS.armoredGarage.getUpgradeInfo(garages[0].level);
+			  if(Math.random()<info.effect.btrChance){
+				btrExpireTick=tickCounter+2;
+				if(!inCatchUp)triggerBTRAnimation();
+			  }
+			}
+		  }
+		  isBTRActive=tickCounter<=btrExpireTick;
+		  checkAchievements();produceResources('farming','food',1.7*TICK_MS/1000);produceResources('recycling','materials',0.5*TICK_MS/1000);produceResources('research','tech',0.2*TICK_MS/1000);produceWeaponsFromArmories();produceZombies();updateFoodConsumption();updateSafetyCenterConsumption();updateBarracksWeaponConsumption();if(gameState.allocations.exploration>0)handleExploration();updateAllDisplays();
 		}
 		function rafBatchLoop(now){
 		  const delta=now-lastTs;
-		  if(delta>=TICK_MS && !inCatchUp){
+		  if(delta>=TICK_MS&&!inCatchUp){
 			const missed=Math.floor(delta/TICK_MS);
 			lastTs+=missed*TICK_MS;
 			gameTick();
-			if(missed>1){
-			  inCatchUp=true;
-			  catchUpQueue=queuedRuns=missed-1;
-			}
+			if(missed>1){inCatchUp=true;catchUpQueue=queuedRuns=missed-1;}
 		  }
 		  if(inCatchUp){
 			suppressSideEffects();
 			const runs=Math.min(catchUpQueue,CHUNK_PER_FRAME);
-			for(let i=0;i<runs;i++) gameTick();
+			for(let i=0;i<runs;i++)gameTick();
 			catchUpQueue-=runs;
 			if(catchUpQueue===0){
-			  inCatchUp=false;
-			  restoreSideEffects();
-			  updateAllDisplays();
-			  updateModalContents();
-			  window.addEventLog(`補跑 ${queuedRuns} 次探索事件（靜默）`,'common','exploration');
-			  window.addEventLog(`補跑 ${queuedRuns} 次生產事件（靜默）`,'common','production');
+			  inCatchUp=false;restoreSideEffects();updateAllDisplays();updateModalContents();window.addEventLog(`補跑 ${queuedRuns} 次探索事件（靜默）`,'common','exploration');window.addEventLog(`補跑 ${queuedRuns} 次生產事件（靜默）`,'common','production');
 			}
-		  } else {
-			updateModalContents();
-		  }
+		  }else updateModalContents();
 		  requestAnimationFrame(rafBatchLoop);
 		}
 		requestAnimationFrame(rafBatchLoop);
+
 
 		document.querySelectorAll('.modal-overlay').forEach(overlay => {
 		  overlay.addEventListener('click', function(event) {
